--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 *.userosscache
 *.sln.docstates
 
+appsettings.*.json
+
+.env.*
+.env.*
+env.*
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
