Reorganized + Added MediatR + Moved classes around to new projects

--- a/src/apis/webapis/Deliscio.Apis.WebApi.Managers/Deliscio.Apis.WebApi.Managers.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApi.Managers/Deliscio.Apis.WebApi.Managers.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\modules\UserLinks\Deliscio.Modules.UserLinks.csproj" />
 		<ProjectReference Include="..\Deliscio.Apis.WebApis.Common\Deliscio.Apis.WebApi.Common.csproj" />
 	</ItemGroup>
 
