--- a/src/modules/UserLinks/Deliscio.Modules.UserLinks.csproj
+++ b/src/modules/UserLinks/Deliscio.Modules.UserLinks.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Mappers\" />
-    <Folder Include="Models\" />
     <Folder Include="Responses\" />
     <Folder Include="Requests\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
   </ItemGroup>
 
 </Project>
