--- a/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
+++ b/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
@@ -11,6 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\common\Common\Deliscio.Common.csproj" />
   </ItemGroup>
 </Project>
