--- a/src/core/Deliscio.Core/Deliscio.Core.csproj
+++ b/src/core/Deliscio.Core/Deliscio.Core.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Abstracts\" />
+  </ItemGroup>
+
 </Project>
