--- a/src/modules/Links/Deliscio.Modules.Links.MediatR/Deliscio.Modules.Links.MediatR.csproj
+++ b/src/modules/Links/Deliscio.Modules.Links.MediatR/Deliscio.Modules.Links.MediatR.csproj
@@ -7,15 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Requests\" />
-    <Folder Include="Responses\" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+    <ProjectReference Include="..\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
   </ItemGroup>
 
 </Project>
