--- a/tests/unit/modules/Deliscio.Tests.Unit.Modules.Links/Deliscio.Tests.Unit.Modules.Links.csproj
+++ b/tests/unit/modules/Deliscio.Tests.Unit.Modules.Links/Deliscio.Tests.Unit.Modules.Links.csproj
@@ -25,4 +25,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\src\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+  </ItemGroup>
+
 </Project>
