--- a/.unitTestGeneratorConfig
+++ b/.unitTestGeneratorConfig
@@ -1,4 +1,4 @@
-[GenerationOptions]
+﻿[GenerationOptions]
 FrameworkType=XUnit
 MockingFrameworkType=Moq
 AllowGenerationWithoutTargetProject=True
@@ -6,9 +6,10 @@ TestProjectNaming={0}.Tests
 TestFileNaming={0}Tests
 TestTypeNaming={0}Tests
 UseFluentAssertions=False
-UseAutoFixture=True
-AutoDetectFrameworkTypes=True
-EmitUsingsOutsideNamespace=True
+UseShouldly=False
+UseAutoFixture=False
+AutoDetectFrameworkTypes=False
+EmitUsingsOutsideNamespace=False
 PartialGenerationAllowed=True
 EmitTestsForInternals=False
 EmitSubclassForProtectedMethods=True
@@ -17,40 +18,47 @@ ArrangeComment=Arrange
 ActComment=Act
 AssertComment=Assert
 UserInterfaceMode=WhenTargetNotFound
-RememberManuallySelectedTargetProjectByDefault=True
 FallbackTargetFinding=TypeInCorrectNamespace
 PrefixFieldReferencesWithThis=False
-EmitXmlDocumentation=True
-UseAutoFixtureForMocking=True
+EmitXmlDocumentation=False
+UseAutoFixtureForMocking=False
 UseMockBehaviorStrict=False
 CreateTargetAssets=True
 TestTypeBaseClass=
 TestTypeBaseClassNamespace=
 GenerateFileScopedNamespaces=False
 PlaceSystemUsingDirectivesFirst=True
+UseFieldForAutoFixture=False
+SkipInternalTypesOnMultipleGeneration=False
+DefaultFailureMessage=Create or modify test
+EmitMultilinePocoInitializers=True
+UseFieldsForConstructorParameterTests=True
 
 [NamingOptions]
-CanCallNamingPattern={memberName}_CanCall
-CanConstructNamingPattern=CanConstruct
-CannotConstructWithNullNamingPattern=CannotConstruct_WithNull_{parameterName}
-CannotConstructWithInvalidNamingPattern=CannotConstruct_WithInvalid_{parameterName}
-CanInitializeNamingPattern=CanInitialize
-CannotInitializeWithNullNamingPattern=CannotInitialize_WithNull_{memberName}
-CannotInitializeWithInvalidNamingPattern=CannotInitialize_WithInvalid_{memberName}
-CanGetNamingPattern={memberName}_CanGet
-CanSetAndGetNamingPattern={memberName}_CanSetAndGet
-CanSetNamingPattern={memberName}_CanSet
-ImplementsIEnumerableNamingPattern={typeParameters}_Implements_IEnumerable
-ImplementsIComparableNamingPattern={typeParameters}_Implements_IComparable
-ImplementsIEquatableNamingPattern={typeParameters}_Implements_IEquatable
+CanCallNamingPattern=Can_Call_{memberName}
+CanConstructNamingPattern=Can_Construct
+CannotConstructWithNullNamingPattern=Cannot_Construct_WithNull_{parameterName}
+CannotConstructWithInvalidNamingPattern=Cannot_Construct_WithInvalid_{parameterName}
+CanInitializeNamingPattern=Can_Initialize
+CannotInitializeWithNullNamingPattern=Cannot_Initialize_WithNull_{memberName}
+CannotInitializeWithInvalidNamingPattern=Cannot_Initialize_WithInvalid_{memberName}
+CanGetNamingPattern=Can_Get_{memberName}
+CanSetAndGetNamingPattern=Can_SetAndGet_{memberName}
+CanSetNamingPattern=Can_Set_{memberName}
+ImplementsIEnumerableNamingPattern=Implements_IEnumerable_{typeParameters}
+ImplementsIComparableNamingPattern=ImplementsI_Comparable_{typeParameters}
+ImplementsIEquatableNamingPattern=Implements_IEquatable_{typeParameters}
 PerformsMappingNamingPattern={memberName}_PerformsMapping
-CannotCallWithNullNamingPattern={memberName}_CannotCall_WithNull_{parameterName}
-CannotCallWithInvalidNamingPattern={memberName}_CannotCall_WithInvalid_{parameterName}
-CanCallOperatorNamingPattern={memberName}_CanCall_Operator
-CannotCallOperatorWithNullNamingPattern={memberName}_CannotCall_Operator_WithNull_{parameterName}
-IsInitializedCorrectlyNamingPattern={memberName}_IsInitializedCorrectly
+CannotCallWithNullNamingPattern=Cannot_Call_{memberName}_WithNull_{parameterName}
+CannotCallWithInvalidNamingPattern=Cannot_Call_{memberName}_WithInvalid_{parameterName}
+CanCallOperatorNamingPattern=Can_Call_{memberName}_Operator
+CannotCallOperatorWithNullNamingPattern=Cannot_Call_{memberName}_Operator_WithNull_{parameterName}
+IsInitializedCorrectlyNamingPattern={memberName}_IsInitialized_Correctly
 TargetFieldName=_testClass
 DependencyFieldName=_{parameterName:camel}
+MockDependencyFieldName=
+AutoFixtureFieldName=_fixture
+ForceAsyncSuffix=True
 
 [StrategyOptions]
 ConstructorChecksAreEnabled=True
