--- a/tests/unit/modules/Deliscio.Tests.Unit.Modules/Deliscio.Tests.Unit.Modules.csproj
+++ b/tests/unit/modules/Deliscio.Tests.Unit.Modules/Deliscio.Tests.Unit.Modules.csproj
@@ -10,16 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Moq" Version="4.20.69" />
+    <PackageReference Include="Moq.Analyzers" Version="0.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.5.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1">
+    <PackageReference Include="xunit.analyzers" Version="1.3.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.0">
+    <PackageReference Include="coverlet.collector" Version="3.2.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -27,6 +31,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Links\" />
   </ItemGroup>
 
 </Project>
