--- a/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
@@ -9,12 +9,14 @@
         "ConnectionString": "mongodb://mongo:g%3F7%3CVd%3E9v4%3BZKk%3DJ@localhost:27018/?authMechanism=DEFAULT",
         "DatabaseName": "deliscio"
     },
-    "LinksQueueOptions": {
-        "Host": "amqp://admin:g?7<Vd>9v4;ZKk=J@localhost:15673/",
-        "QueueName": "links-queue",
+    "LinksQueueSettings": {
+        "Host": "rabbitmq://localhost:5673/",
+        "Username": "deviscio",
+        "Password": "1234567890",
+        "QueueName": "submitted-links",
         "MaxConcurrentCalls": 1,
         "MaxDequeueCount": 5,
         "VisibilityTimeout": 60,
         "MaxRetryCount": 5
-    },
+    }
 }
