--- a/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
+++ b/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.1.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
@@ -17,6 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\common\Common\Deliscio.Common.csproj" />
     <ProjectReference Include="..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+    <ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links.Common\Deliscio.Modules.Links.Common.csproj" />
+    <ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
+    <ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
     <ProjectReference Include="..\..\modules\QueuedLink\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+    <ProjectReference Include="..\..\modules\QueuedLink\MassTransit\Deliscio.Modules.QueuedLinks.MassTransit.csproj" />
   </ItemGroup>
 </Project>
