--- a/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
+++ b/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Consumers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MassTransit.Abstractions" Version="8.1.0" />
+    <PackageReference Include="MassTransit" Version="8.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
