--- a/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
@@ -14,6 +14,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Carter" Version="7.2.0" />
+		<PackageReference Include="MassTransit.Abstractions" Version="8.1.0" />
 		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.10.0.77988">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
