--- a/src/modules/QueuedLink/Harvester/Deliscio.Modules.QueuedLinks.Harvester.csproj
+++ b/src/modules/QueuedLink/Harvester/Deliscio.Modules.QueuedLinks.Harvester.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.53" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+  </ItemGroup>
+
 </Project>
