Short circuit the call to MassTransit/RabbitMQ as it doesn't seem to want to work

--- a/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "MongoDbOptions": {
-        "ConnectionString": "mongodb://mongo:g%3F7%3CVd%3E9v4%3BZKk%3DJ@localhost:27018/?authMechanism=DEFAULT",
+        "ConnectionString": "mongodb://mongo:g%3F7%3CVd%3E9v4%3BZKk%3DJ@localhost:27018",
         "DatabaseName": "deliscio"
     },
     "LinksQueueSettings": {
