--- a/src/modules/QueuedLink/QueuedLinks/Deliscio.Modules.QueuedLinks.csproj
+++ b/src/modules/QueuedLink/QueuedLinks/Deliscio.Modules.QueuedLinks.csproj
@@ -7,17 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Requests\" />
-    <Folder Include="Responses\" />
+    <Compile Remove="Data\**" />
+    <Compile Remove="Mappers\**" />
+    <Compile Remove="Models\**" />
+    <Compile Remove="Requests\**" />
+    <Compile Remove="Responses\**" />
+    <EmbeddedResource Remove="Data\**" />
+    <EmbeddedResource Remove="Mappers\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <EmbeddedResource Remove="Requests\**" />
+    <EmbeddedResource Remove="Responses\**" />
+    <None Remove="Data\**" />
+    <None Remove="Mappers\**" />
+    <None Remove="Models\**" />
+    <None Remove="Requests\**" />
+    <None Remove="Responses\**" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
     <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
     <ProjectReference Include="..\Harvester\Deliscio.Modules.QueuedLinks.Harvester.csproj" />
+    <ProjectReference Include="..\Tagger\Deliscio.Modules.QueuedLinks.Tagger.csproj" />
     <ProjectReference Include="..\Verifier\Deliscio.Modules.QueuedLinks.Verifier.csproj" />
   </ItemGroup>
 
