--- a/src/modules/QueuedLink/Tagger/Deliscio.Modules.QueuedLinks.Tagger.csproj
+++ b/src/modules/QueuedLink/Tagger/Deliscio.Modules.QueuedLinks.Tagger.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+  </ItemGroup>
+
 </Project>
