--- a/src/modules/Links/Deliscio.Modules.Links/Deliscio.Modules.Links.csproj
+++ b/src/modules/Links/Deliscio.Modules.Links/Deliscio.Modules.Links.csproj
@@ -7,6 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Responses\**" />
+	  <EmbeddedResource Remove="Responses\**" />
+	  <None Remove="Responses\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
 		<PackageReference Include="MediatR" Version="12.1.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
@@ -19,10 +25,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
 	  <ProjectReference Include="..\Deliscio.Modules.Links.Common\Deliscio.Modules.Links.Common.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Responses\" />
 	</ItemGroup>
 
 </Project>
