More Tests & Fixes/Validations + 29% Coverage |:

--- a/src/modules/QueuedLink/MediatR/Deliscio.Modules.QueuedLinks.MediatR.csproj
+++ b/src/modules/QueuedLink/MediatR/Deliscio.Modules.QueuedLinks.MediatR.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\" />
+    <Compile Remove="Queries\**" />
+    <EmbeddedResource Remove="Queries\**" />
+    <None Remove="Queries\**" />
   </ItemGroup>
 
   <ItemGroup>
