--- a/src/modules/QueuedLink/Harvester/Deliscio.Modules.QueuedLinks.Harvester.csproj
+++ b/src/modules/QueuedLink/Harvester/Deliscio.Modules.QueuedLinks.Harvester.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.53" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
