More Tests Updates + Also moves some MediatR handlers into the their own folders within the Command or Query folders

--- a/.unitTestGeneratorConfig
+++ b/.unitTestGeneratorConfig
@@ -1,19 +1,21 @@
 ﻿[GenerationOptions]
+AutoDetectFrameworkTypes=False
 FrameworkType=XUnit
-MockingFrameworkType=Moq
+MockingFrameworkType=MoqAutoMock
 AllowGenerationWithoutTargetProject=True
 TestProjectNaming={0}.Tests
 TestFileNaming={0}Tests
 TestTypeNaming={0}Tests
 UseFluentAssertions=False
 UseShouldly=False
-UseAutoFixture=False
-AutoDetectFrameworkTypes=False
-EmitUsingsOutsideNamespace=False
+UseAutoFixture=True
+UseAutoFixtureForMocking=True
+UseFieldForAutoFixture=True
+EmitUsingsOutsideNamespace=True
 PartialGenerationAllowed=True
 EmitTestsForInternals=False
-EmitSubclassForProtectedMethods=True
 AutomaticallyConfigureMocks=True
+EmitSubclassForProtectedMethods=True
 ArrangeComment=Arrange
 ActComment=Act
 AssertComment=Assert
@@ -21,49 +23,47 @@ UserInterfaceMode=WhenTargetNotFound
 FallbackTargetFinding=TypeInCorrectNamespace
 PrefixFieldReferencesWithThis=False
 EmitXmlDocumentation=False
-UseAutoFixtureForMocking=False
 UseMockBehaviorStrict=False
 CreateTargetAssets=True
 TestTypeBaseClass=
 TestTypeBaseClassNamespace=
-GenerateFileScopedNamespaces=False
+GenerateFileScopedNamespaces=True
 PlaceSystemUsingDirectivesFirst=True
-UseFieldForAutoFixture=False
 SkipInternalTypesOnMultipleGeneration=False
 DefaultFailureMessage=Create or modify test
 EmitMultilinePocoInitializers=True
 UseFieldsForConstructorParameterTests=True
 
 [NamingOptions]
-CanCallNamingPattern=Can_Call_{memberName}
 CanConstructNamingPattern=Can_Construct
 CannotConstructWithNullNamingPattern=Cannot_Construct_WithNull_{parameterName}
 CannotConstructWithInvalidNamingPattern=Cannot_Construct_WithInvalid_{parameterName}
 CanInitializeNamingPattern=Can_Initialize
 CannotInitializeWithNullNamingPattern=Cannot_Initialize_WithNull_{memberName}
 CannotInitializeWithInvalidNamingPattern=Cannot_Initialize_WithInvalid_{memberName}
-CanGetNamingPattern=Can_Get_{memberName}
-CanSetAndGetNamingPattern=Can_SetAndGet_{memberName}
-CanSetNamingPattern=Can_Set_{memberName}
-ImplementsIEnumerableNamingPattern=Implements_IEnumerable_{typeParameters}
-ImplementsIComparableNamingPattern=ImplementsI_Comparable_{typeParameters}
-ImplementsIEquatableNamingPattern=Implements_IEquatable_{typeParameters}
-PerformsMappingNamingPattern={memberName}_PerformsMapping
-CannotCallWithNullNamingPattern=Cannot_Call_{memberName}_WithNull_{parameterName}
-CannotCallWithInvalidNamingPattern=Cannot_Call_{memberName}_WithInvalid_{parameterName}
-CanCallOperatorNamingPattern=Can_Call_{memberName}_Operator
-CannotCallOperatorWithNullNamingPattern=Cannot_Call_{memberName}_Operator_WithNull_{parameterName}
+CanGetNamingPattern=CanGet_{memberName}
+CanSetAndGetNamingPattern=CanSet_And_Get_{memberName}
+CanSetNamingPattern=CanSet_{memberName}
 IsInitializedCorrectlyNamingPattern={memberName}_IsInitialized_Correctly
+ImplementsIEnumerableNamingPattern=ImplementsI_Enumerable_{typeParameters}
+ImplementsIComparableNamingPattern=ImplementsI_Comparable_{typeParameters}
+ImplementsIEquatableNamingPattern=ImplementsI_Equatable_{typeParameters}
+CanCallNamingPattern=CanCall_{memberName}
+PerformsMappingNamingPattern={memberName}_PerformsMapping
+CannotCallWithNullNamingPattern=CannotCall_{memberName}_WithNull_{parameterName}
+CannotCallWithInvalidNamingPattern=CannotCall_{memberName}_WithInvalid_{parameterName}
+CanCallOperatorNamingPattern=CanCall_{memberName}_Operator
+CannotCallOperatorWithNullNamingPattern=CannotCall_{memberName}_Operator_WithNull_{parameterName}
 TargetFieldName=_testClass
 DependencyFieldName=_{parameterName:camel}
 MockDependencyFieldName=
 AutoFixtureFieldName=_fixture
-ForceAsyncSuffix=True
+ForceAsyncSuffix=False
 
 [StrategyOptions]
 ConstructorChecksAreEnabled=True
-InitializerChecksAreEnabled=True
 ConstructorParameterChecksAreEnabled=True
+InitializerChecksAreEnabled=True
 InitializerPropertyChecksAreEnabled=True
 MethodCallChecksAreEnabled=True
 MappingMethodChecksAreEnabled=True
