--- a/src/modules/UserLinks/MediatR/Deliscio.Modules.UserLinks.MediatR.csproj
+++ b/src/modules/UserLinks/MediatR/Deliscio.Modules.UserLinks.MediatR.csproj
@@ -7,9 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="Queries\" />
+    <Compile Remove="Commands\**" />
+    <Compile Remove="Handlers\**" />
+    <Compile Remove="Queries\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <EmbeddedResource Remove="Handlers\**" />
+    <EmbeddedResource Remove="Queries\**" />
+    <None Remove="Commands\**" />
+    <None Remove="Handlers\**" />
+    <None Remove="Queries\**" />
   </ItemGroup>
 
 </Project>
