--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,5 @@ FodyWeavers.xsd
 *.sln.iml
 
 /.idea/
+/tests/functional/apis/webapis/Deliscio.Tests.Functional.Apis.WebApis/appsettings.Development.json
+/tests/functional/apis/webapis/Deliscio.Tests.Functional.Apis.WebApis/appsettings.json
