--- a/src/modules/UserLinks/Common/Deliscio.Modules.UserLinks.Common.csproj
+++ b/src/modules/UserLinks/Common/Deliscio.Modules.UserLinks.Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+  </ItemGroup>
+
 </Project>
