Links Tags Page + Can drill down into tags and get related Links and Tags + Added .env supper and a Configs.ts to read from the .env files

--- a/src/ui/website/.prettierrc
+++ b/src/ui/website/.prettierrc
@@ -4,6 +4,7 @@
    "tabWidth": 3,
    "useTabs": false,
    "insertPragma": false,
+   "printWidth": 100,
    "jsxBracketSameLine": true,
    "jsxSingleQuote": true,
    "tsxBracketSameLine": true,
