UI Updates & Refinements to the Verification and Tagging

--- a/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.Development.json
@@ -17,6 +17,89 @@
         "MaxConcurrentCalls": 1,
         "MaxDequeueCount": 5,
         "VisibilityTimeout": 60,
-        "MaxRetryCount": 5
+        "MaxRetryCount": 5,
+        "BannedDomains": [
+            "127.0.0.1",
+            "192.168.",
+            "172.20.",
+            "localhost",
+            "mail.",
+            "calendar.",
+            "docs.google.com",
+            "drive.google",
+            "meet.google.com",
+            "accounts.intuit.com",
+            "hostgator.com",
+            "www.sportchek.ca",
+            "www.chainreactioncycles.com",
+            "ebay.ca",
+            "ebay.com",
+            "amazon.ca",
+            "amazon.com",
+            "login.",
+            "www.kijiji.ca",
+            "www.strava.com",
+            "arvixe.com",
+            "elegantthemes.com",
+            "brownssports.com",
+            "account.jetbrains.com",
+            "melmagazine.com",
+            "aliexpress.com",
+            "alidropship.com",
+            "wish.com",
+            "vice.com",
+            "vox.com",
+            "theverge.com",
+            "1843magazine.com",
+            "thedailybeast.com",
+            "cargurus.com",
+            "usedcars.com",
+            "eventbrite.com",
+            "www.eventbrite.ca",
+            "newegg.ca",
+            "newegg.com",
+            "walmart.ca",
+            "walmart.com",
+            "jlebel.visualstudio.com",
+            "narrative.ly",
+            "huffingtonpost.com",
+            "huffpost.com",
+            "reddit.com",
+            "zwift.com",
+            "digg.com",
+            "wolftoothcomponents.com",
+            "bikedepot.com",
+            "instagram.com",
+            "kijiji.ca",
+            "kijiji.com",
+            "dazeddigital.com",
+            "menshealth.com",
+            "thebrick.com",
+            "leons.ca",
+            "bestbuy.com",
+            "bestbuy.ca",
+            "facebook.com",
+            "themeforest.com",
+            "fedex.com",
+            "purolator.com",
+            "dhl.com",
+            "ups.com",
+            "canadapost.ca",
+            "canadapost.com",
+            "woocommerce.com",
+            "vulture.com",
+            "wiivape.com",
+            "onlyfans.com",
+            "pcfinancial.ca",
+            "canadiantire.ca",
+            "mistervapor.ca",
+            "koodomobile.com",
+            "rogers.ca",
+            "bell.ca",
+            "veloviewer.com",
+            "cosmopolitan.com",
+            "slate.com",
+            "staples.ca"
+        ]
     }
 }
