--- a/src/apis/webapis/Deliscio.Apis.WebApi/Deliscio.Apis.WebApi.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/Deliscio.Apis.WebApi.csproj
@@ -32,6 +32,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
+		<ProjectReference Include="..\..\..\modules\QueuedLink\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
 		<ProjectReference Include="..\..\..\modules\QueuedLink\MassTransit\Deliscio.Modules.QueuedLinks.MassTransit.csproj" />
 		<ProjectReference Include="..\..\..\modules\QueuedLink\MediatR\Deliscio.Modules.QueuedLinks.MediatR.csproj" />
 		<ProjectReference Include="..\..\..\modules\UserLinks\MediatR\Deliscio.Modules.UserLinks.MediatR.csproj" />
