--- a/src/modules/QueuedLink/Common/Deliscio.Modules.QueuedLinks.Common.csproj
+++ b/src/modules/QueuedLink/Common/Deliscio.Modules.QueuedLinks.Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+  </ItemGroup>
+
 </Project>
