--- a/src/apis/webapis/Deliscio.Apis.WebApi.Managers/Deliscio.Apis.WebApi.Managers.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApi.Managers/Deliscio.Apis.WebApi.Managers.csproj
@@ -15,9 +15,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links.Common\Deliscio.Modules.Links.Common.csproj" />
 		<ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
-		<ProjectReference Include="..\..\..\modules\QueuedLink\MassTransit\Deliscio.Modules.QueuedLinks.MassTransit.csproj" />
-		<ProjectReference Include="..\..\..\modules\QueuedLink\MediatR\Deliscio.Modules.QueuedLinks.MediatR.csproj" />
+		<ProjectReference Include="..\..\..\modules\QueuedLink\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+		<ProjectReference Include="..\..\..\modules\QueuedLink\QueuedLinks\Deliscio.Modules.QueuedLinks.csproj" />
 		<ProjectReference Include="..\..\..\modules\UserLinks\Common\Deliscio.Modules.UserLinks.Common.csproj" />
 		<ProjectReference Include="..\..\..\modules\UserLinks\MediatR\Deliscio.Modules.UserLinks.MediatR.csproj" />
 		<ProjectReference Include="..\Deliscio.Apis.WebApis.Common\Deliscio.Apis.WebApi.Common.csproj" />
