--- a/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
@@ -25,7 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+	  <ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links.Common\Deliscio.Modules.Links.Common.csproj" />
 	  <ProjectReference Include="..\..\..\modules\UserLinks\Common\Deliscio.Modules.UserLinks.Common.csproj" />
 	</ItemGroup>
 
