--- a/src/core/Deliscio.Core.Data.Mongo/Deliscio.Core.Data.Mongo.csproj
+++ b/src/core/Deliscio.Core.Data.Mongo/Deliscio.Core.Data.Mongo.csproj
@@ -18,6 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
 		<PackageReference Include="MongoDB.Bson" Version="2.21.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.21.0" />
 		<PackageReference Include="MongoDB.Driver.Core" Version="2.21.0" />
