--- a/src/modules/BacklogLinks/Deliscio.Modules.Backlog/Deliscio.Modules.Backlog.csproj
+++ b/src/modules/BacklogLinks/Deliscio.Modules.Backlog/Deliscio.Modules.Backlog.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.21.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.10.0.77988">
       <PrivateAssets>all</PrivateAssets>
@@ -24,7 +25,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
     <ProjectReference Include="..\..\..\core\Deliscio.Core.Data\Deliscio.Core.Data.csproj" />
-    <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
   </ItemGroup>
 
 </Project>
