Updated/Fixed Tests + Endpoints that returns a collection of Links, now return a collection of LinkItems + GetLinks endpoint uses querystrings to handle different cases + Updated Links Mapper to have a generic mapper to be able to map LinkEntities to LinkItems + Renamed the Get()s that return a collection of Links, to GetLinksBy[Condition]
UI
+ Updated api calls

--- a/src/ui/website/.vscode/launch.json
+++ b/src/ui/website/.vscode/launch.json
@@ -15,7 +15,7 @@
       },
       {
          "name": "Next.js: debug full stack",
-         "type": "node-terminal",
+         "type": "chrome",
          "request": "launch",
          "command": "npm run dev",
          "serverReadyAction": {
