Basic Client Authentication + Added authentication for the client app + Updated useEffect in the PopularRelatedTags component + Added example settings to appsettings

--- a/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.json
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/appsettings.json
@@ -5,5 +5,40 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ApiKey": "[SUPER-SECRET-API-KEY]",
+    "MongoDbOptions": {
+        "ConnectionString": "mongodb://mongo:[MONGO-PASSWORD]@[MONGO-HOST]:[MONGO-PORT]",
+        "DatabaseName": "deliscio"
+    },
+    "LinksQueueSettings": {
+        "Host": "rabbitmq://[RABBIT-HOST]:[RABBIT-PORT]/",
+        "Username": "[USERNAME]",
+        "Password": "[PASSWORD]",
+        "QueueName": "submitted-links",
+        "MaxConcurrentCalls": 1,
+        "MaxDequeueCount": 5,
+        "VisibilityTimeout": 60,
+        "MaxRetryCount": 5,
+        "BannedHosts": [
+            "127.0.0.1",
+            "192.168.",
+            "172.20.",
+            "localhost",
+
+            "calendar.",
+            "docs.google.com",
+            "drive.google",
+            "login.",
+            "mail.",
+            "meet.google.com",
+
+            "amazon.ca",
+            "amazon.com",
+            "ebay.ca",
+            "ebay.com",
+            "kijiji.ca",
+            "kijiji.com"
+        ]
+    }
 }
