--- a/tests/functional/apis/webapis/Deliscio.Tests.Functional.Apis.WebApis/Deliscio.Tests.Functional.Apis.WebApis.csproj
+++ b/tests/functional/apis/webapis/Deliscio.Tests.Functional.Apis.WebApis/Deliscio.Tests.Functional.Apis.WebApis.csproj
@@ -10,10 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.development.json" />
     <None Remove="appsettings.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
