--- a/src/ui/website/tsconfig.json
+++ b/src/ui/website/tsconfig.json
@@ -29,6 +29,12 @@
          "@/src/utils/*": ["utils/*"]
       }
    },
-   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+   "include": [
+      "next-env.d.ts",
+      "**/*.ts",
+      "**/*.tsx",
+      ".next/types/**/*.ts",
+      "src/app/[...params]/page.tsxz"
+   ],
    "exclude": ["node_modules"]
 }
