--- a/src/apis/webapis/Deliscio.Apis.WebApi/Deliscio.Apis.WebApi.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApi/Deliscio.Apis.WebApi.csproj
@@ -15,8 +15,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="IdentityServer4" Version="4.1.2" />
+		<PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
 		<PackageReference Include="MassTransit" Version="8.1.0" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.MongoDB" Version="1.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
