--- a/src/core/Deliscio.Core.Data.Mongo/Deliscio.Core.Data.Mongo.csproj
+++ b/src/core/Deliscio.Core.Data.Mongo/Deliscio.Core.Data.Mongo.csproj
@@ -7,18 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="NewFolder\**" />
-	  <EmbeddedResource Remove="NewFolder\**" />
-	  <None Remove="NewFolder\**" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Compile Remove="IMongoDocument.cs" />
 	  <Compile Remove="MongoDocument.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
 		<PackageReference Include="MongoDB.Bson" Version="2.21.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.21.0" />
