--- a/tests/functional/web/Deliscio.Tests.Functional.Web.Mvc/Deliscio.Tests.Functional.Web.Mvc.csproj
+++ b/tests/functional/web/Deliscio.Tests.Functional.Web.Mvc/Deliscio.Tests.Functional.Web.Mvc.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.12" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
